tests/asm-link/anon-label-bad/rgbasm.err
error: label defined outside of a section
   ╭─[ test.asm:2:1 ]
   │
 2 │ : ; Outside of section
   │ ┬  
   │ ╰── no section is active at this point
───╯
error: anonymous label offset out of range
   ╭─[ test.asm:6:5 ]
   │
 6 │     db :-- ; Reference goes too far back
   │        ─┬─  
   │         ╰─── 0 anonymous labels have been defined thus far
───╯
error: syntax error: unexpected anonymous label reference
   ╭─[ test.asm:9:9 ]
   │
 9 │     EXPORT :-
   │            ─┬  
   │             ╰── expected "identifier", "scoped identifier", "local identifier", "redef", or "def"
───╯
[-Wpurge=2] warning: deleting a label
    ╭─[ test.asm:10:8 ]
    │
 10 │     PURGE :-
    │           ─┬  
    │            ╰── deleting `<anonymous label 0>` here
────╯
error: syntax error: unexpected ::
    ╭─[ test.asm:22:1 ]
    │
 22 │ :: ; Syntax error, can't export this
    │ ─┬  
    │  ╰── expected "identifier", "scoped identifier", "local identifier", ":", "+", "-", "adc", ...90 others
────╯
4 errors generated.
